# Discord-Freebies

./: Cargo.toml  data.txt
scripts/: botstart.service  start.sh
src/: 2main.rs  data.txt  mai2n.rs  main.rs
