[package]
name = "epic-notifier"
version = "0.1.0"
authors = ["Ionestar <kmahadew21@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thirtyfour = "0.24.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
color-eyre = "0.5"
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"]}
async-std = "1.0"

